Implemented infinite hierarchy

--- a/application/modules/default/views/scripts/departments/edit.phtml
+++ b/application/modules/default/views/scripts/departments/edit.phtml
@@ -60,7 +60,7 @@
 					</div>
 					
 					<div class="new-form-ui">
-					  <label>Business Unit</label>
+					  <label>Business Unit/Department</label>
 					<div class="division"><?php echo $this->form->unitid;?></div>
 						<?php if(isset($this->msgarray['unitid'])){?>
 						   <span class="errors" id="errors-<?php echo $this->form->unitid->getId(); ?>"><?php echo $this->msgarray['unitid'];?></span>
