Fix for hierarchy department assignment.

--- a/application/modules/default/views/scripts/structure/index.phtml
+++ b/application/modules/default/views/scripts/structure/index.phtml
@@ -20,7 +20,7 @@
  ********************************************************************************/
 ?>
 
-<?php if (!empty($this->orgData)) { ?>
+<?php if ($this->orgTree->getSize() != 0) { ?>
 
     <style>
         #ifrDiv {
