--- a/application/modules/default/views/scripts/empcommunicationdetails/view.phtml
+++ b/application/modules/default/views/scripts/empcommunicationdetails/view.phtml
@@ -54,6 +54,14 @@ sapp_Helper::viewHeader();
 sapp_Helper::viewBody('nor','Personal Email',(!empty($this->data[0]['personalemail']))?$this->data[0]['personalemail']:"...",'','');
 sapp_Helper::viewFooter();
 ?>
+<div class="separetor-heading">Work Address</div>
+<?php
+sapp_Helper::viewHeader();
+sapp_Helper::viewBody('alt','Street Address',(!empty($this->data[0]['work_streetaddress']))?$this->data[0]['work_streetaddress']:"...",'Country',(!empty($this->data[0]['work_country']))?$this->data[0]['work_country']:"...");
+sapp_Helper::viewBody('nor','State',(!empty($this->data[0]['work_state']))?$this->data[0]['work_state']:"...",'City',(!empty($this->data[0]['work_city']))?$this->data[0]['work_city']:"...");
+sapp_Helper::viewBody('alt','Pincode',(!empty($this->data[0]['work_pincode']))?$this->data[0]['work_pincode']:"...",'','');
+sapp_Helper::viewFooter();
+?>
 <div class="separetor-heading">Permanent Address</div>
 <?php 
 sapp_Helper::viewHeader();
@@ -76,37 +84,8 @@ sapp_Helper::viewHeader();
 sapp_Helper::viewBody('alt','Name',(!empty($this->data[0]['emergency_name']))?$this->data[0]['emergency_name']:"...",'Email',(!empty($this->data[0]['emergency_email']))?$this->data[0]['emergency_email']:"...");
 sapp_Helper::viewBody('nor','Number',(!empty($this->data[0]['emergency_number']))?$this->data[0]['emergency_number']:"...",'','');
 sapp_Helper::viewFooter();
-?>				
-			
-				<div class="separetor-heading">Work Address</div>	
-				<div class="work-address">
-					<div class="division">
-							<?php
-							if(!empty($this->dataArray))
-							{
-								$address1 = explode(',',$this->dataArray['address1']);
-								if(!empty($address1))
-								{
-									for($i=0;$i<sizeof($address1);$i++)
-									{
-										echo $address1[$i].',<br>';
-									}
-								}
-								else
-								{
-									echo $address1.', ';
-								}
-								if($this->dataArray['city'] != '')
-									echo $this->dataArray['city'].', ';
-								if($this->dataArray['state'] != '')
-									echo $this->dataArray['state'].', ';
-								if($this->dataArray['country'] != '')
-									echo $this->dataArray['country'].'.';
-							}			
-							
-							?>
-					</div>
-				</div>
+?>
+
 			</div>
            
 	<?php }?>		
